fix starcontainer overlap bug

--- a/css/index.css
+++ b/css/index.css
@@ -426,6 +426,8 @@ article div {
 
 .demo-section,
 .icons-section {
+  position: relative;
+  z-index: 1;
   display:flex;
   flex-direction: column;
   gap: 1.5rem;
